base/008-intg/fuse-008-intg-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: intg
  name: intg
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: intg
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: intg
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-intg:development"
          name: intg
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
            - name: grpc-port
              containerPort: 10000
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
